<resources>
    <string name="app_name">thingyClientYellow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email_default">your email</string>
    <string name="dyrlogo">DyrLogo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register_login">RegisterLoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="promp_password_confirm">Confirm Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_creation_fail">Can\'t create the account</string>
    <string name="sign_in_fail">Can\'t connect to your Dyr account</string>
    <string name="passwords_not_same">passwords are not the same</string>
</resources>
