<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ch.snipy.thingyClientYellow.LoginActivityFragment"
        android:minHeight="250dp"
        android:id="@+id/constraintLayoutLoginFragment"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_min="wrap">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/dyrlogo"
            android:src="@mipmap/dyr_logo_round"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            android:indeterminate="false"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            android:hint="@string/prompt_password"
            android:layout_marginStart="16dp"
            />

    <AutoCompleteTextView
            android:text="@string/login_email_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_email"
            android:labelFor="@id/login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            android:layout_marginStart="16dp"
            android:completionHint="@string/prompt_email"/>

    <Button
            android:id="@+id/sign_in_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="onClickSignIn"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_nav"/>

    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_nav"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/sign_in_action"
            android:onClick="onSelectFragment"
            android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
